--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,15 +1,16 @@
 FROM node:12.18.3
 
-WORKDIR /app/client
+WORKDIR /app/client/build
 
-ENV PATH /app/client/node_modules/.bin:$PATH
+ENV PATH /app/client/build/node_modules/.bin:$PATH
 
 COPY package*.json ./
 
 RUN npm install --silent
+RUN npm install reactjs-popup
 
 COPY . .
 
 EXPOSE 3000
 
-CMD ["npm", "start"]
+CMD ["npm","run", "start"]
